--- a/src/StringMaster/StringMaster.csproj
+++ b/src/StringMaster/StringMaster.csproj
@@ -124,6 +124,7 @@
     </Compile>
     <Compile Include="Extensions\CogoPointExtensions.cs" />
     <Compile Include="Commands.cs" />
+    <Compile Include="Services\Implementation\AcadColorPicker.cs" />
     <Compile Include="Services\Implementation\MessageBoxService.cs" />
     <Compile Include="Services\Implementation\OpenDialogService.cs" />
     <Compile Include="Services\Implementation\SaveDialogService.cs" />
@@ -131,6 +132,9 @@
     <Compile Include="Services\Interfaces\IOpenDialogService.cs" />
     <Compile Include="Services\Interfaces\ISaveDialogService.cs" />
     <Compile Include="Services\Interfaces\IPaletteControl.cs" />
+    <Compile Include="Models\AcadColor.cs" />
+    <Compile Include="Services\Interfaces\IAcadColorPicker.cs" />
+    <Compile Include="Models\AcadColors.cs" />
     <Compile Include="Utilities\FeatureLineUtils.cs" />
     <Compile Include="Helpers\MathHelpers.cs" />
     <Compile Include="Helpers\PointHelpers.cs" />
@@ -200,7 +204,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\help.bmp" />
     <Resource Include="Resources\Icons\new.bmp" />
