--- a/src/StringMaster/StringMaster.csproj
+++ b/src/StringMaster/StringMaster.csproj
@@ -139,6 +139,7 @@
     </Compile>
     <Compile Include="Extensions\CogoPointExtensions.cs" />
     <Compile Include="Commands.cs" />
+    <Compile Include="Resources\PropertyEditTemplateSelector.cs" />
     <Compile Include="Services\Implementation\AcadColorDialogService.cs" />
     <Compile Include="Services\Implementation\AcadLayerService.cs" />
     <Compile Include="Services\Implementation\DialogService.cs" />
@@ -182,7 +183,10 @@
     <Compile Include="UserControls\StringCogoPointsView.xaml.cs">
       <DependentUpon>StringCogoPointsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\LayerCreateDialogViewModel.cs" />
+    <Compile Include="Models\Properties.cs" />
     <Compile Include="ViewModels\LayerSelectDialogViewModel.cs" />
+    <Compile Include="Resources\PropertyTemplateSelector.cs" />
     <Compile Include="ViewModels\StringCogoPointsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +211,14 @@
     <Page Include="Dialogs\LayerSelectDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\ComboBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\Button.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -260,5 +272,6 @@
   <ItemGroup>
     <Resource Include="Resources\Icons\key.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
