--- a/src/StringMaster/StringMaster.csproj
+++ b/src/StringMaster/StringMaster.csproj
@@ -139,7 +139,6 @@
     </Compile>
     <Compile Include="Extensions\CogoPointExtensions.cs" />
     <Compile Include="Commands.cs" />
-    <Compile Include="Resources\PropertyEditTemplateSelector.cs" />
     <Compile Include="Services\Implementation\AcadColorDialogService.cs" />
     <Compile Include="Services\Implementation\AcadLayerService.cs" />
     <Compile Include="Services\Implementation\DialogService.cs" />
@@ -184,9 +183,9 @@
       <DependentUpon>StringCogoPointsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\LayerCreateDialogViewModel.cs" />
-    <Compile Include="Models\Properties.cs" />
+    <Compile Include="Models\LayerProperties.cs" />
     <Compile Include="ViewModels\LayerSelectDialogViewModel.cs" />
-    <Compile Include="Resources\PropertyTemplateSelector.cs" />
+    <Compile Include="Helpers\LayerPropertiesTemplateSelector.cs" />
     <Compile Include="ViewModels\StringCogoPointsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -211,6 +210,10 @@
     <Page Include="Dialogs\LayerSelectDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\FlatComboBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Resources\ComboBox.xaml">
       <Generator>MSBuild:Compile</Generator>
