Added datagrid cursors

--- a/src/StringMaster/StringMaster.csproj
+++ b/src/StringMaster/StringMaster.csproj
@@ -233,6 +233,11 @@
   <ItemGroup>
     <Resource Include="Resources\Icons\execute.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Cursors\checkmark.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Cursors\pluscursor.cur" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
