--- a/src/StringMaster/StringMaster.csproj
+++ b/src/StringMaster/StringMaster.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Extensions\CircularArcExtensions.cs" />
     <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\WindowExtensions.cs" />
+    <Compile Include="Helpers\LineweightHelpers.cs" />
     <Compile Include="Helpers\ResourceExtension.cs" />
     <Compile Include="Helpers\AngleHelpers.cs" />
     <Compile Include="Ioc.cs" />
@@ -156,14 +157,14 @@
     <Compile Include="Services\Interfaces\IPaletteControl.cs" />
     <Compile Include="Models\AcadColor.cs" />
     <Compile Include="Services\Interfaces\IAcadColorDialogService.cs" />
-    <Compile Include="Utilities\FeatureLineUtils.cs" />
+    <Compile Include="Helpers\FeatureLineHelpers.cs" />
     <Compile Include="Helpers\MathHelpers.cs" />
     <Compile Include="Helpers\PointHelpers.cs" />
     <Compile Include="Helpers\StringHelpers.cs" />
     <Compile Include="Helpers\XmlHelper.cs" />
     <Compile Include="StringMasterPalette.cs" />
     <Compile Include="StringMasterPlugin.cs" />
-    <Compile Include="Utilities\LayerUtils.cs" />
+    <Compile Include="Helpers\LayerHelpers.cs" />
     <Compile Include="Models\Angle.cs" />
     <Compile Include="Models\DescriptionKey.cs" />
     <Compile Include="Models\DescriptionKeyMatch.cs" />
@@ -172,7 +173,7 @@
     <Compile Include="Models\RadiusPoint.cs" />
     <Compile Include="Models\SurveyPoint.cs" />
     <Compile Include="Extensions\PointExtensions.cs" />
-    <Compile Include="Utilities\PolylineUtils.cs" />
+    <Compile Include="Helpers\PolylineHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Strings\ResourceStrings.Designer.cs">
@@ -290,5 +291,6 @@
       <Version>5.4.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
