--- a/src/StringMaster.Civil/StringMaster.Civil.csproj
+++ b/src/StringMaster.Civil/StringMaster.Civil.csproj
@@ -95,13 +95,13 @@
     <Compile Include="StringMasterPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\StringMaster.Common\StringMaster.Common.csproj">
+      <Project>{6589eb3d-ea6b-4a98-89dc-53dd3204dd14}</Project>
+      <Name>StringMaster.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StringMaster.UI\StringMaster.UI.csproj">
       <Project>{e7e68e77-3b95-4977-a84a-fd4a3eb0d713}</Project>
       <Name>StringMaster.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StringMaster\StringMaster.Common.csproj">
-      <Project>{6589eb3d-ea6b-4a98-89dc-53dd3204dd14}</Project>
-      <Name>StringMaster.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
