--- a/src/StringMaster.Acad/StringMaster.Acad.csproj
+++ b/src/StringMaster.Acad/StringMaster.Acad.csproj
@@ -65,11 +65,10 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="StringMaster.Common">
-      <HintPath>..\StringMaster\bin\Debug\StringMaster.Common.dll</HintPath>
+      <HintPath>..\StringMaster.Common\bin\x64\Debug\StringMaster.Common.dll</HintPath>
     </Reference>
-    <Reference Include="StringMaster.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\StringMaster\bin\Debug\StringMaster.UI.dll</HintPath>
+    <Reference Include="StringMaster.UI">
+      <HintPath>..\StringMaster.Common\bin\x64\Debug\StringMaster.UI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
